--- a/post/src/main/resources/application.properties
+++ b/post/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Service name
-spring.application.name=student-service
+spring.application.name=post-service
 # Port
-server.port=8200
+server.port=8300
 # Eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
@@ -11,7 +11,7 @@ logging.level.org.springframework.web=debug
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/studentdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/postdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.initialization-mode=always
