--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -5,10 +5,14 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 # A prefix that can added to beginning of all requests.
 #zuul.prefix=/api
 
-# Disable accessing services using service name (i.e. teacher-service).
+# Disable accessing services using service name (i.e. post-service).
 # They should be only accessed through the path defined below.
 zuul.ignored-services=*
 
 # Map paths to services
-zuul.routes.teacher-service.path=/students/**
-zuul.routes.teacher-service.service-id=teacher-service
+zuul.routes.post-service.path=/**
+zuul.routes.post-service.service-id=post-service
+
+# Map paths to services
+zuul.routes.student-service.path=/**
+zuul.routes.student-service.service-id=student-service
