update test post

--- a/post/.gitignore
+++ b/post/.gitignore
@@ -29,3 +29,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
