--- a/student/pom.xml
+++ b/student/pom.xml
@@ -139,10 +139,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>2.22.1</version>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-					<shutdown>kill</shutdown> <!-- Use it if required-->
+					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
 		</plugins>
