--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,9 @@ language:
 jdk:
   - oraclejdk11
 
-#env:
-#  - TEST_DIR=student
-#  - TEST_DIR=post
-#
-#before_install:
-#  - cd $TEST_DIR
+env:
+  - TEST_DIR=student
+  - TEST_DIR=post
 
 before_install:
-  - cd student
+  - cd $TEST_DIR
