--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -10,9 +10,9 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 zuul.ignored-services=*
 
 # Map paths to services
-zuul.routes.post-service.path=/**
+zuul.routes.post-service.path=/posts/**
 zuul.routes.post-service.service-id=post-service
 
 # Map paths to services
-zuul.routes.student-service.path=/**
+zuul.routes.student-service.path=/students/**
 zuul.routes.student-service.service-id=student-service
