add comment service

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -16,3 +16,7 @@ zuul.routes.post-service.service-id=post-service
 # Map paths to services
 zuul.routes.student-service.path=/students/**
 zuul.routes.student-service.service-id=student-service
+
+# Map paths to services
+zuul.routes.comment-service.path=/comments/**
+zuul.routes.comment-service.service-id=comment-service
