--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -20,3 +20,13 @@ zuul.routes.student-service.service-id=student-service
 # Map paths to services
 zuul.routes.comment-service.path=/comments/**
 zuul.routes.comment-service.service-id=comment-service
+
+# Map path to auth service
+zuul.routes.auth-service.path=/auth/**
+zuul.routes.auth-service.service-id=auth-service
+
+# In case of auth, we need to pass the "/auth/" in the path to auth service. So, set strip-prefix to false
+zuul.routes.auth-service.strip-prefix=false
+
+# Exclude authorization from sensitive headers
+zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
