--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -5,12 +5,13 @@ server.port=8600
 # Eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+
 # Datasource
 logging.level.org.springframework.web=debug
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/studentdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.initialization-mode=always
